--- a/action.yaml
+++ b/action.yaml
@@ -10,6 +10,9 @@ inputs:
   cf_api_token:
     description: "Cloudflare API Token"
     required: true
+  cf_access_test_url:
+    description: "CF Access Test URL"
+    required: true
 outputs:
   rule_id:
     value: ${{ env.rule_id }}
@@ -67,3 +70,6 @@ runs:
           echo "Failed to verify IP $ipv4 in access rules after $max_retries retries."
           exit 1
         fi
+
+    - name: Verify Access to Cloudflare-protected server
+      run: curl https://dev.briefsqa.com/
