--- a/.github/workflows/add-cf-site-bypass.yml
+++ b/.github/workflows/add-cf-site-bypass.yml
@@ -1,75 +1,85 @@
-name: Bypass Cloudflare for Github Action
-description: Manages IP whitelisting in Cloudflare to make sure github action server can access cloudflare proxied host.
-branding:
-  icon: shield-off
-  color: blue
-inputs:
-  cf_zone_id:
-    description: "Cloudflare Zone ID"
-    required: true
-  cf_api_token:
-    description: "Cloudflare API Token"
-    required: true
-  cf_access_test_url:
-    description: "CF Access Test URL"
-    required: true
-outputs:
-  rule_id:
-    value: ${{ env.rule_id }}
-    description: "The ID of the created access rule"
-runs:
-  using: "composite"
-  steps:
-    - name: Get Public IP
-      shell: bash
-      id: ip
-      run: |
-        result=$(curl https://ipinfo.io/json)
-        ip=$(echo $result | jq -r '.ip')
-        echo "public_ip=$ip" >> $GITHUB_ENV
-    - name: Make CF API request and extract Rules ID
-      shell: bash
-      id: extract_id
-      run: |
-        ipv4=${{ env.public_ip }}    
-        response=$(curl --request POST \
-          --url https://api.cloudflare.com/client/v4/zones/${{ inputs.cf_zone_id }}/firewall/access_rules/rules \
-          --header 'Content-Type: application/json' \
-          --header 'Authorization: Bearer ${{ inputs.cf_api_token }}' \
-          --data '{"mode":"whitelist","configuration":{"target":"ip","value":"'"$ipv4"'"},"notes":"Github Action IP for API ACCESS"}')
-        echo "Response: $response"
-        id=$(echo $response | jq -r '.result.id')
-        echo "Extracted ID: $id"
-        echo "rule_id=$id" >> $GITHUB_ENV
-        echo "rule_id=$id" >> $GITHUB_OUTPUT
-    - name: Wait for IP to appear in Access Rules
-      shell: bash
-      id: wait_for_ip
-      run: |
-        ipv4=${{ env.public_ip }}
-        max_retries=10
-        retry_interval=1
-        count=0
-        while [ $count -lt $max_retries ]; do
-          sleep $retry_interval
-          response=$(curl --request GET \
-            --url https://api.cloudflare.com/client/v4/zones/${{ inputs.cf_zone_id }}/firewall/access_rules/rules?configuration.value=$ipv4 \
-            --header 'Content-Type: application/json' \
-            --header 'Authorization: Bearer ${{ inputs.cf_api_token }}')
-          ip_in_rules=$(echo $response | jq -r '.result | length')
-          if [ "$ip_in_rules" -gt 0 ]; then
-            echo "IP $ipv4 is now whitelisted."
-            rule_id=$(echo $response | jq -r '.result[0].id')
-            echo "rule_id=$rule_id" >> $GITHUB_OUTPUT
-            break
-          fi
-          echo "IP $ipv4 not found yet, waiting..."
-          count=$((count + 1))
-        done
-        if [ $count -eq $max_retries ]; then
-          echo "Failed to verify IP $ipv4 in access rules after $max_retries retries."
-          exit 1
-        fi
+name: Create Cloudflare WAF hole punch
+description: Creates a Cloudflare WAF Rule for the current IP of the Github Actions runner.
 
-    - name: Verify Access to Cloudflare-protected server
-      run: curl https://dev.briefsqa.com/
+on:
+  workflow_call:
+    secrets:
+      cf_api_token:
+        description: "Cloudflare API Token"
+        required: true
+      cf_zone_id:
+        description: "Cloudflare Zone ID"
+        required: true
+    
+    inputs:
+      cf_access_test_url:
+        description: "CF Access Test URL. MUST match the `secrets.cf_zone_id` given"
+        required: true
+        type: string
+      
+    outputs:
+      rule_id:
+        value: ${{ jobs.make_waf_rule.outputs.waf_rule_id }}
+        description: "The ID of the created access rule"
+
+jobs:
+  make_waf_rule:
+    runs-on: ubuntu-latest
+    outputs:
+        waf_rule_id: ${{ steps.make_waf_rule.outputs.waf_rule_id }}
+    steps:
+      - name: Get Public IP
+        shell: bash
+        id: ip
+        run: |
+          result=$(curl https://ipinfo.io/json)
+          ip=$(echo $result | jq -r '.ip')
+          echo "public_ip=$ip" >> $GITHUB_ENV
+
+      - name: Make WAF Rule
+        shell: bash
+        id: make_waf_rule
+        run: |
+          ipv4=${{ env.public_ip }}    
+          response=$(curl --request POST \
+            --url https://api.cloudflare.com/client/v4/zones/${{ secrets.cf_zone_id }}/firewall/access_rules/rules \
+            --header 'Content-Type: application/json' \
+            --header 'Authorization: Bearer ${{ secrets.cf_api_token }}' \
+            --data '{"mode":"whitelist","configuration":{"target":"ip","value":"'"$ipv4"'"},"notes":"Github Action IP for API ACCESS"}')
+          echo "Response: $response"
+          id=$(echo $response | jq -r '.result.id')
+          echo "Extracted ID: $id"
+          echo "waf_rule_id=$id" >> $GITHUB_ENV
+          echo "waf_rule_id=$id" >> $GITHUB_OUTPUT
+
+      - name: Validate IP in Access Rules
+        shell: bash
+        id: wait_for_ip
+        run: |
+          ipv4=${{ env.public_ip }}
+          max_retries=10
+          retry_interval=1
+          count=0
+          while [ $count -lt $max_retries ]; do
+            sleep $retry_interval
+            response=$(curl --request GET \
+              --url https://api.cloudflare.com/client/v4/zones/${{ secrets.cf_zone_id }}/firewall/access_rules/rules?configuration.value=$ipv4 \
+              --header 'Content-Type: application/json' \
+              --header 'Authorization: Bearer ${{ secrets.cf_api_token }}')
+            ip_in_rules=$(echo $response | jq -r '.result | length')
+            if [ "$ip_in_rules" -gt 0 ]; then
+              echo "IP $ipv4 is now whitelisted."
+              rule_id=$(echo $response | jq -r '.result[0].id')
+              echo "rule_id=$rule_id" >> $GITHUB_OUTPUT
+              break
+            fi
+            echo "IP $ipv4 not found yet, waiting..."
+            count=$((count + 1))
+          done
+          if [ $count -eq $max_retries ]; then
+            echo "Failed to verify IP $ipv4 in access rules after $max_retries retries."
+            exit 1
+          fi
+
+      - name: Verify Access to Cloudflare-protected server
+        run: curl https://${{ inputs.cf_access_test_url }}
